--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  min-height: calc(100vh - 64px); /* Subtract the height of the navigation bar */
+  min-height: 100vh;
 }
 
 .description {
